Fix white space by styling body in index.css.  Remove App.css.

--- a/src/components/Preview/Preview.css
+++ b/src/components/Preview/Preview.css
@@ -7,7 +7,6 @@
 .button-container {
   display: flex;
   justify-content: center;
-  margin-top: 30px;
   width: 100%;
   }
 
